# api/swagger.yaml
@@ -180,8 +180,8 @@ paths:
     get:
       tags:
       - "service"
-      summary: "Get articles items of a selected service by ID"
-      operationId: "getServiceArticlesItemsByID"
+      summary: "Get related articles data of a selected service by ID"
+      operationId: "getServiceRelatedArticlesByID"
       produces:
       - "application/json"
       parameters:
@@ -362,8 +362,8 @@ paths:
     get:
       tags:
       - "event"
-      summary: "Get articles items of a selected event by ID"
-      operationId: "getEventArticlesItemsByID"
+      summary: "Get related articles data of a selected event by ID"
+      operationId: "getEventRelatedArticlesByID"
       produces:
       - "application/json"
       parameters:
@@ -559,56 +559,6 @@ paths:
             type: "array"
             items:
               $ref: "#/definitions/ArticleItem"
-        "400":
-          description: "Invalid ID"
-      x-swagger-router-controller: "Article"
-  /article/{id_article}/service:
-    get:
-      tags:
-      - "article"
-      summary: "Get service ID of a selected article by ID"
-      operationId: "getArticleServiceIDByID"
-      produces:
-      - "application/json"
-      - "application/xml"
-      parameters:
-      - name: "id_article"
-        in: "path"
-        description: "ID of article to search for service"
-        required: true
-        type: "integer"
-        format: "int64"
-      responses:
-        "200":
-          description: "Successful operation"
-          schema:
-            type: integer
-            format: "int64"
-        "400":
-          description: "Invalid ID"
-      x-swagger-router-controller: "Article"
-  /article/{id_article}/event:
-    get:
-      tags:
-      - "article"
-      summary: "Get event ID of a selected article by ID"
-      operationId: "getArticleEventIDByID"
-      produces:
-      - "application/json"
-      - "application/xml"
-      parameters:
-      - name: "id_article"
-        in: "path"
-        description: "ID of article to search for event"
-        required: true
-        type: "integer"
-        format: "int64"
-      responses:
-        "200":
-          description: "Successful operation"
-          schema:
-            type: integer
-            format: "int64"
         "400":
           description: "Invalid ID"
       x-swagger-router-controller: "Article"
